--- a/about.html
+++ b/about.html
@@ -19,8 +19,8 @@
                 <ul id="navbar">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="shop.html">Shop</a></li>
-                    <li><a class ="active" href="blog.html">Blog</a></li>
-                    <li><a href="about.html">About</a></li>
+                    <li><a href="blog.html">Blog</a></li>
+                    <li><a class ="active" href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <li id="lg-bag"><a href="cart.html"><i class="fal fa-shopping-bag"></i></a></li>
                     <a href="#" id="close"><i class="far fa-times"></i></a>
@@ -32,73 +32,57 @@
             </div>
         </section>
 
-        <section id="page-header" class="blog-header">
-            <h2>#readmore</h2>
-            <p>Read all case studies about our products</p>
+        <section id="page-header" class="about-header">
+            <h2>#KnowUs</h2>
+            <p>Lorem ipsum dolor sit amet consectetur</p>
         </section> 
 
-        <section id="blog">
-            <div class="blog-box">
-                <div class="blog-img">
-                    <img src="img/blog/b1.jpg">
-                </div>
-            <div class="blog-details">
-                <h4>The Cotton-Jersey Zip-Up Hoodies</h4>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-                <a href="#">CONTINUE READING</a>
-            </div>
-                <h1>25/08</h1>
-            </div>
-            <div class="blog-box">
-                <div class="blog-img">
-                    <img src="img/blog/b2.jpg">
-                </div>
-            <div class="blog-details">
-                <h4>How to Style a Quiff</h4>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-                <a href="#">CONTINUE READING</a>
-            </div>
-                <h1>26/08</h1>
-            </div>
-            <div class="blog-box">
-                <div class="blog-img">
-                    <img src="img/blog/b3.jpg">
-                </div>
-            <div class="blog-details">
-                <h4>Must-Have Skater Girl  items</h4>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-                <a href="#">CONTINUE READING</a>
-            </div>
-                <h1>27/08</h1>
-            </div>
-            <div class="blog-box">
-                <div class="blog-img">
-                    <img src="img/blog/b4.jpg">
-                </div>
-            <div class="blog-details">
-                <h4>Runway-Inspired Trends</h4>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-                <a href="#">CONTINUE READING</a>
-            </div>
-                <h1>28/08</h1>
-            </div>
-            <div class="blog-box">
-                <div class="blog-img">
-                    <img src="img/blog/b6.jpg">
-                </div>
-            <div class="blog-details">
-                <h4>AW20 Menswear Trends</h4>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-                <a href="#">CONTINUE READING</a>
-            </div>
-                <h1>30/08</h1>
+        <section id="about-head" class="section-p1">
+            <img src="img/about/a6.jpg" alt="">
+            <div>
+                <h2>Who we are?</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis, ipsum ducimus? Dolor, laudantium quisquam. Deleniti nam amet quam possimus, reiciendis, incidunt dignissimos eaque.</p>
+
+                <abbr title="">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae, error nemo, nulla.</abbr>
+
+                <br><br>
+
+                <marquee bgcolor="#ccc" loop="-1" scrollamount="5" width="100%">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente perspiciatis saepe expedita culpa. Iure quam qui nemo, ratione atque ab nesciunt labore.</marquee>
             </div>
         </section>
 
-        <section id="pagination" class="section-p1">
-            <a href="#">1</a>
-            <a href="#">2</a>
-            <a href="#"><i class="fal fa-long-arrow-alt-right"></i></a>
+        <section id="about-app" class="section-p1">
+            <h1>Download Our <a href="#">App</a></h1>
+            <div class="video">
+                <video autoplay muted loop src="img/about/1.mp4"></video>
+            </div>
+        </section>
+
+        <section id="feature" class="section-p1">
+            <div class="fe-box">
+                <img src="img/features/f1.png">
+                <h6>Free Shipping</h6>
+            </div>
+            <div class="fe-box">
+                <img src="img/features/f2.png">
+                <h6>Online Order</h6>
+            </div>
+            <div class="fe-box">
+                <img src="img/features/f3.png">
+                <h6>Save Money</h6>
+            </div>
+            <div class="fe-box">
+                <img src="img/features/f4.png">
+                <h6>Promotions</h6>
+            </div>
+            <div class="fe-box">
+                <img src="img/features/f5.png">
+                <h6>Happy Sell</h6>
+            </div>
+            <div class="fe-box">
+                <img src="img/features/f6.png">
+                <h6>24/7 Support</h6>
+            </div> 
         </section>
 
         <section id="newsletter" class="section-p1 section-m1" >
