--- a/contact.html
+++ b/contact.html
@@ -19,9 +19,9 @@
                 <ul id="navbar">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="shop.html">Shop</a></li>
-                    <li><a class ="active" href="blog.html">Blog</a></li>
+                    <li><a href="blog.html">Blog</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a class ="active" href="contact.html">Contact</a></li>
                     <li id="lg-bag"><a href="cart.html"><i class="fal fa-shopping-bag"></i></a></li>
                     <a href="#" id="close"><i class="far fa-times"></i></a>
                 </ul>
@@ -32,73 +32,65 @@
             </div>
         </section>
 
-        <section id="page-header" class="blog-header">
-            <h2>#readmore</h2>
-            <p>Read all case studies about our products</p>
+        <section id="page-header" class="about-header">
+            <h2>#let's talk</h2>
+            <p>Lorem ipsum dolor sit amet consectetur</p>
         </section> 
 
-        <section id="blog">
-            <div class="blog-box">
-                <div class="blog-img">
-                    <img src="img/blog/b1.jpg">
+        <section id="contact-details" class="section-p1">
+            <div class="details">
+                <span>GET IN TOUCH</span>
+                <h2>Vist one of our agency locations or contact us today</h2>
+                <h3>Head Offices</h3>
+                <div>
+                    <li>
+                        <i class="fal fa-map"></i>
+                        <p>EM/4, Sector-V, Salt Lake, Kolkata</p>
+                    </li>
+                    <li>
+                        <i class="fal fa-envelope"></i>
+                        <p>contact@example.com</p>
+                    </li>
+                    <li>
+                        <i class="fal fa-phone-alt"></i>
+                        <p>contact@example.com</p>
+                    </li>
+                    <li>
+                        <i class="fal fa-clock"></i>
+                        <p>Monday to Saturday: 9:00 AM to 17:00 PM</p>
+                    </li>
                 </div>
-            <div class="blog-details">
-                <h4>The Cotton-Jersey Zip-Up Hoodies</h4>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-                <a href="#">CONTINUE READING</a>
             </div>
-                <h1>25/08</h1>
-            </div>
-            <div class="blog-box">
-                <div class="blog-img">
-                    <img src="img/blog/b2.jpg">
-                </div>
-            <div class="blog-details">
-                <h4>How to Style a Quiff</h4>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-                <a href="#">CONTINUE READING</a>
-            </div>
-                <h1>26/08</h1>
-            </div>
-            <div class="blog-box">
-                <div class="blog-img">
-                    <img src="img/blog/b3.jpg">
-                </div>
-            <div class="blog-details">
-                <h4>Must-Have Skater Girl  items</h4>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-                <a href="#">CONTINUE READING</a>
-            </div>
-                <h1>27/08</h1>
-            </div>
-            <div class="blog-box">
-                <div class="blog-img">
-                    <img src="img/blog/b4.jpg">
-                </div>
-            <div class="blog-details">
-                <h4>Runway-Inspired Trends</h4>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-                <a href="#">CONTINUE READING</a>
-            </div>
-                <h1>28/08</h1>
-            </div>
-            <div class="blog-box">
-                <div class="blog-img">
-                    <img src="img/blog/b6.jpg">
-                </div>
-            <div class="blog-details">
-                <h4>AW20 Menswear Trends</h4>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-                <a href="#">CONTINUE READING</a>
-            </div>
-                <h1>30/08</h1>
+            <div class="map">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3684.066889762916!2d88.43264051429477!3d22.576601438514793!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a0275af7f5da61b%3A0x3e0a58d696a1c874!2sDN-23%2C%20DN%20BLOCK%2C%20DN%20Block%2C%20Sector%20V%2C%20Bidhannagar%2C%20Kolkata%2C%20West%20Bengal%20700091!5e0!3m2!1sen!2sin!4v1662754059324!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
         </section>
 
-        <section id="pagination" class="section-p1">
-            <a href="#">1</a>
-            <a href="#">2</a>
-            <a href="#"><i class="fal fa-long-arrow-alt-right"></i></a>
+        <section id="form-details">
+            <form action="">
+                <span>LEAVE A MESSAGE</span>
+                <h2>We love to hear from you</h2>
+                <input type="text" placeholder="Your Name">
+                <input type="text" placeholder="E-mail">
+                <input type="text" placeholder="Subject">
+                <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+                <button class="normal">Submit</button>
+            </form>
+
+            <div class="people">
+                <div>
+                    <img src="img/people/1.png" alt="">
+                    <p><span>John Doe</span> Senior Marketing Manager <br> Phone: +000 123 000 77 88 <br> Email: contact@exapmle.com</p>
+                </div>
+                <div>
+                    <img src="img/people/2.png" alt="">
+                    <p><span>William Smith</span> Senior Marketing Manager <br> Phone: +000 123 000 77 88 <br> Email: contact@exapmle.com</p>
+                </div>
+                <div>
+                    <img src="img/people/3.png" alt="">
+                    <p><span>Natalie Fischer</span> Senior Marketing Manager <br> Phone: +000 123 000 77 88 <br> Email: contact@exapmle.com</p>
+                </div>
+            </div>
         </section>
 
         <section id="newsletter" class="section-p1 section-m1" >
